--- a/app/globals.css
+++ b/app/globals.css
@@ -13,3 +13,20 @@
 body {
   color: rgb(var(--foreground-rgb));
 }
+
+@layer utilities {
+  ::-webkit-scrollbar {
+    background-color: transparent;
+    width: 15px;
+  }
+  ::-webkit-scrollbar-thumb {
+    border: 4px solid rgba(0, 0, 0, 0);
+    background-color: #9ca3af;
+    border-radius: 9999px;
+    background-clip: padding-box;
+    min-height: 50px;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #6b7280;
+  }
+}
